@@ -16,12 +16,12 @@ repositories {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(19)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
 compileJava {
-    options.release.set(11)
+    options.release.set(17)
 }
 
 tasks.withType(GroovyCompile).configureEach {
@@ -40,7 +40,7 @@ java {
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:2.0.13'
+    implementation 'org.slf4j:slf4j-api:2.0.16'
 
     testImplementation 'ch.qos.logback:logback-core:1.5.12'
     testImplementation 'ch.qos.logback:logback-classic:1.5.12'
@@ -55,7 +55,6 @@ dependencies {
 
 tasks.withType(Test).configureEach {
     jvmArgs([
-            '--enable-preview',
             '--add-opens=java.base/java.lang=ALL-UNNAMED',
             '--add-opens=java.base/java.io=ALL-UNNAMED',
             '--add-opens=java.base/java.nio=ALL-UNNAMED',
